--- a/lielupe.html
+++ b/lielupe.html
@@ -22,7 +22,7 @@
             <ul class="flex">
               <li class="mr-2"><a href="index.html">Sākumlapa</a></li>
               <li><a href="about.html">Par mani</a></li>
-              <li class="ml-2"><a href="lielupe.html">EN</a></li>
+              <li class="ml-2"><a href="lielupe_english.html">EN</a></li>
             </ul>
           </div>
         </li>
