--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </a>
         <a href="kemeri.html">
           <div class="p-4 m-4 rounded-md bg-white  max-w-xs flex flex-col">
-            <img src="images/kemeri_square.JPG" class="w-full self-center" />
+            <img src="images/kemeri_square.jpg" class="w-full self-center" />
             <div class=" self-center">
               <h3 class="text-black text-center p-4">
                 Ķemeru nacionālais<br />
@@ -71,7 +71,7 @@
         </a>
         <a href="slokenbeka.html">
           <div class="p-4 m-4 rounded-md bg-white  max-w-xs flex flex-col">
-            <img src="images/sloken_square.JPG" class="w-full self-center" />
+            <img src="images/sloken_square.jpg" class="w-full self-center" />
             <div class=" self-center">
               <h3 class="text-black text-center p-4">
                 Šlokenbekas<br />
@@ -82,7 +82,7 @@
         </a>
         <a href="lielupe.html">
           <div class="p-4 m-4 rounded-md bg-white  max-w-xs flex flex-col">
-            <img src="images/lielupe_square.JPG" class="w-full self-center" />
+            <img src="images/lielupe_square.jpg" class="w-full self-center" />
             <div class=" self-center">
               <h3 class="text-black text-center p-4">
                 Lielupes<br />
@@ -93,7 +93,7 @@
         </a>
         <a href="laci.html">
           <div class="p-4 m-4 rounded-md bg-white  max-w-xs flex flex-col">
-            <img src="images/laci_square.JPG" class="w-full self-center" />
+            <img src="images/laci_square.jpg" class="w-full self-center" />
             <div class=" self-center">
               <h3 class="text-black text-center p-4">
                 Lāču<br />
@@ -104,7 +104,7 @@
         </a>
         <a href="zinatnu.html">
           <div class="p-4 m-4 rounded-md bg-white  max-w-xs flex flex-col">
-            <img src="images/zinatnu_square.JPG" class="w-full self-center" />
+            <img src="images/zinatnu_square.jpg" class="w-full self-center" />
             <div class=" self-center">
               <h3 class="text-black text-center p-4">
                 Zinātņu<br />
