--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       </div>
     </div>
     <div class="min-h-screen">
-      <div class=" mx-6 max-w-6xl rounded-md py-6 px-10 flex flex-col items-center">
-        <p class="text-xl m-6">Mani sauc Atis Ozols un šis ir mans maršruts no dzīvesvietas līdz Latvijas Universitātei. </p>
-        <p class="m-6">
+      <div class=" mx-6 w-full rounded-md py-6 px-10 flex flex-col items-center">
+        <p class="text-xl max-w-6xl m-6">Mani sauc Atis Ozols un šis ir mans maršruts no dzīvesvietas līdz Latvijas Universitātei. </p>
+        <p class="m-6 max-w-6xl">
           Kad uzsāku studijas Latvijas Universitātē dzīvoju Tukuma pilsētā, bet nu jau pāris gadus dzīvoju ārpus pilsētas. Mana dzīvesvieta tagad ir Tukuma novada Tumes pagastā - mājās “Skultes”. Braucot ar auto no manām mājam līdz Latvijas Universitātei ir jāveic 86km tāls ceļš.
         </p>
       </div>
