--- a/index_english.html
+++ b/index_english.html
@@ -40,9 +40,9 @@
       </div>
     </div>
     <div class="min-h-screen">
-      <div class=" mx-6 max-w-6xl rounded-md py-6 px-10 flex flex-col items-center">
-        <p class="text-xl m-6">My name is Atis Ozols and this is my route from home to my university.</p>
-        <p class="m-6">
+      <div class=" mx-6 w-full rounded-md py-6 px-10 flex flex-col items-center">
+        <p class="text-xl max-w-6xl m-6">My name is Atis Ozols and this is my route from home to my university.</p>
+        <p class="m-6 max-w-6xl">
           When I started my studies in University of Latvia, I was living in the city of Tukums. Now I live in a house near Tume. A drive from home to LU is 86km long.
         </p>
       </div>
