--- a/kemeri.html
+++ b/kemeri.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Atis Ozols</title>
   </head>
-  <body class="bg-kemer-red font-kanit">
+  <body class="bg-kemer-red font-kanit w-screen" style="overflow-x: hidden;">
     <nav class="p-5 bg-kemer-darkred text-black font-extralight">
       <ul class="flex justify-center sm:justify-between">
         <li><a href="index.html"><img src="images/logo_black.png" alt="Atis Ozols" class="h-5"></a></li>
