--- a/slokenbeka.html
+++ b/slokenbeka.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="style.css" />
     <title>Atis Ozols</title>
   </head>
-  <body class="bg-sloken-bg font-kanit h-full">
-    <nav class="p-5 bg-sloken-header text-white font-extralight">
+  <body class="bg-sloken-bg font-kanit h-full w-screen" style="overflow-x: hidden;">
+    <nav class="p-5 bg-sloken-header text-white font-extraw-screen" style="overflow-x: hidden;">light">
       <ul class="flex justify-center sm:justify-between">
         <li><a href="index.html"><img src="images/logo_white.png" alt="Atis Ozols" class="h-5"></a></li>
         <li>
