--- a/slokenbeka_english.html
+++ b/slokenbeka_english.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Atis Ozols</title>
   </head>
-  <body class="bg-sloken-bg font-kanit">
+  <body class="bg-sloken-bg font-kanit w-screen" style="overflow-x: hidden;">
     <nav class="p-5 bg-sloken-header text-white font-extralight">
       <ul class="flex justify-center sm:justify-between">
         <li><a href="index_english.html"><img src="images/logo_white.png" alt="Atis Ozols" class="h-5"></a></li>
