--- a/zinatnu.html
+++ b/zinatnu.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Atis Ozols</title>
   </head>
-  <body class="bg-zinatn-bg font-kanit">
+  <body class="bg-zinatn-bg font-kanit w-screen" style="overflow-x: hidden;">
     <nav class="p-5 bg-zinatn-header text-white font-extralight">
       <ul class="flex justify-center sm:justify-between">
         <li><a href="index.html"><img src="images/logo_white.png" alt="Atis Ozols" class="h-5"></a></li>
