--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="width: 100vw; overflow-x: hidden;">
+<html lang="en" class="w-screen overflow-x-hidden">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Atis Ozols</title>
   </head>
-  <body class="bg-slate-300 font-kanit w-screen" style="overflow-x: hidden;">
+  <body class="bg-slate-300 font-kanit w-screen overflow-x-hidden" style="overflow-x: hidden;">
     <nav class="p-5 bg-stone-900 text-white font-extralight">
       <ul class="flex justify-center sm:justify-between">
         <li><a href="index.html"><img src="images/logo_white.png" alt="Atis Ozols" class="h-5"></a></li>
