--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="w-full overflow-x-hidden">
+<html lang="en" class="w-full overflow-x-hidden" style="width: 100vw !important; overflow-x: hidden !important;">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
