--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="style.css" />
     <title>Atis Ozols</title>
   </head>
-  <body class="bg-slate-300 font-kanit w-screen overflow-x-hidden" style="overflow-x: hidden;">
+  <body class="bg-slate-300 font-kanit w-screen overflow-x-hidden">
+    <div class="w-screen overflow-x-hidden">
     <nav class="p-5 bg-stone-900 text-white font-extralight">
       <ul class="flex justify-center sm:justify-between">
         <li><a href="index.html"><img src="images/logo_white.png" alt="Atis Ozols" class="h-5"></a></li>
@@ -120,6 +121,7 @@
       <img src="images/lvw.png" alt="Logo" class="max-w-logo w-1/4 sm:w-1/5 lg:w-1/6 ">
       <span class="mt-4">© Atis Ozols 2022</span>
     </footer>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
