--- a/slokenbeka.html
+++ b/slokenbeka.html
@@ -23,7 +23,7 @@
             <ul class="flex">
               <li class="mr-2"><a href="index.html">Sākumlapa</a></li>
               <li><a href="about.html">Par mani</a></li>
-              <li class="ml-2"><a href="slokenbeka_english.html">EN</a></li>
+              <li class="ml-2 mr-2"><a href="slokenbeka_english.html">EN</a></li>
             </ul>
           </div>
         </li>
