--- a/stadions_english.html
+++ b/stadions_english.html
@@ -23,7 +23,7 @@
             <ul class="flex">
                 <li class="mr-2"><a href="index_english.html">Home</a></li>
               <li><a href="about_english.html">About me</a></li>
-              <li class="ml-2"><a href="stadions.html">LV</a></li>
+              <li class="ml-2 mr-2"><a href="stadions.html">LV</a></li>
             </ul>
           </div>
         </li>
