--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </ul>
     </nav>
     <button class="text-white absolute top-0 p-2 right-3 text-4xl sm:hidden" onclick="open_side()">=</button>
-    <div id="sidebar" class="bg-stone-900 w-screen h-screen absolute top-0 right-[-110%]" style="transition: right 0.3s ease">
+    <div id="sidebar" class="bg-stone-900 w-screen h-screen absolute top-0 right-[-110%] hidden" style="transition: right 0.3s ease">
       <button class="text-white relative top-4 left-[7%] text-3xl sm:hidden" onclick="close_side()">X</button>
       <div>
         <ul class="mt-10 flex flex-col justify-center items-center text-white ">
