--- a/slokenbeka.html
+++ b/slokenbeka.html
@@ -15,7 +15,7 @@
     <title>Atis Ozols</title>
   </head>
   <body class="bg-sloken-bg font-kanit h-full w-screen" style="overflow-x: hidden;">
-    <nav class="p-5 bg-sloken-header text-white font-extraw-screen" style="overflow-x: hidden;">light">
+    <nav class="p-5 bg-sloken-header text-white font-extraw-screen" style="overflow-x: hidden">
       <ul class="flex justify-center sm:justify-between">
         <li><a href="index.html"><img src="images/logo_white.png" alt="Atis Ozols" class="h-5"></a></li>
         <li>
@@ -30,7 +30,7 @@
       </ul>
     </nav>
     <button class="text-white absolute top-0 p-2 right-3 text-4xl sm:hidden" onclick="open_side()">=</button>
-    <div id="sidebar" class="bg-sloken-header w-screen h-screen absolute top-0 right-[-110%]" style="transition: right 0.3s ease">
+    <div id="sidebar" class="bg-sloken-header hidden h-screen absolute top-0 right-[-110%]" style="transition: right 0.3s ease">
       <button class="text-white relative top-4 left-[7%] text-3xl sm:hidden" onclick="close_side()">X</button>
       <div>
         <ul class="mt-10 flex flex-col justify-center items-center text-white ">
