--- a/zinatnu.html
+++ b/zinatnu.html
@@ -14,10 +14,14 @@
     <link rel="stylesheet" href="style.css" />
     <title>Atis Ozols</title>
   </head>
-  <body class="bg-zinatn-bg font-kanit w-screen" style="overflow-x: hidden;">
+  <body class="bg-zinatn-bg font-kanit w-screen" style="overflow-x: hidden">
     <nav class="p-5 bg-zinatn-header text-white font-extralight">
       <ul class="flex justify-center sm:justify-between">
-        <li><a href="index.html"><img src="images/logo_white.png" alt="Atis Ozols" class="h-5"></a></li>
+        <li>
+          <a href="index.html"
+            ><img src="images/logo_white.png" alt="Atis Ozols" class="h-5"
+          /></a>
+        </li>
         <li>
           <div class="hidden sm:block">
             <ul class="flex">
@@ -29,11 +33,25 @@
         </li>
       </ul>
     </nav>
-    <button class="text-white absolute top-0 p-2 right-3 text-4xl sm:hidden" onclick="open_side()">=</button>
-    <div id="sidebar" class="bg-zinatn-header w-screen h-screen absolute top-0 right-[-110%]" style="transition: right 0.3s ease">
-      <button class="text-white relative top-4 left-[7%] text-3xl sm:hidden" onclick="close_side()">X</button>
+    <button
+      class="text-white absolute top-0 p-2 right-3 text-4xl sm:hidden"
+      onclick="open_side()"
+    >
+      =
+    </button>
+    <div
+      id="sidebar"
+      class="bg-zinatn-header hidden h-screen absolute top-0 right-[-110%]"
+      style="transition: right 0.3s ease"
+    >
+      <button
+        class="text-white relative top-4 left-[7%] text-3xl sm:hidden"
+        onclick="close_side()"
+      >
+        X
+      </button>
       <div>
-        <ul class="mt-10 flex flex-col justify-center items-center text-white ">
+        <ul class="mt-10 flex flex-col justify-center items-center text-white">
           <li class="text-3xl mt-8"><a href="index.html">Sākumlapa</a></li>
           <li class="text-3xl mt-8"><a href="about.html">Par mani</a></li>
           <li class="text-3xl mt-8"><a href="zinatnu_english.html">EN</a></li>
@@ -41,28 +59,35 @@
       </div>
     </div>
     <div class="min-h-screen">
-      <div class="m-6 rounded-md overflow-hidden flex flex-col justify-center sm:h-custom1 lg:h-custom">
-        <img class="w-full " src="images/zinatnu1_cropped.jpg ">
+      <div
+        class="m-6 rounded-md overflow-hidden flex flex-col justify-center sm:h-custom1 lg:h-custom"
+      >
+        <img class="w-full" src="images/zinatnu1_cropped.jpg " />
       </div>
       <div class="bg-zinatn-card m-6 rounded-md p-6 mb-11">
-        <h3 class="m-6 text-3xl text-bold">Zinātņu akadēmija
-        </h3>
-        <p class="text-xl m-6">Zinātņu akadēmijas skatu tornis. 65 metru augstumā esošais
-          Latvijas Zinātņu akadēmijas skatu laukums paver elpu
-          aizraujošu skatu uz Rīgu no augšas. Ļoti labi var redzēt Vecrīgu,
-          Centrāltirgu baznīcu torņus un tiltus. Protams, paveicas, ja ir
-          labi laikapstākļi! Latvijas Zinātņu akadēmijas ēka ir unikāla
-          būve, kas manu uzmanību ir piesaistījusi jau no agras bērnības,
-          kad braucām uz Rīgu. Tās arhitektūra vienmēr atgādināja kādu
-          pili. Zinātņu akadēmijas augstceltne ir 21 stāvu augsta. Tā tiek
-          uzskatīta par pirmo augstceltni Latvijā. Augstceltnes
-          projektēšana un arī celtniecība ilga gandrīz 10 gadus un tā tika
-          pabeigta 1961. gadā.
-          </p>
+        <h3 class="m-6 text-3xl text-bold">Zinātņu akadēmija</h3>
+        <p class="text-xl m-6">
+          Zinātņu akadēmijas skatu tornis. 65 metru augstumā esošais Latvijas
+          Zinātņu akadēmijas skatu laukums paver elpu aizraujošu skatu uz Rīgu
+          no augšas. Ļoti labi var redzēt Vecrīgu, Centrāltirgu baznīcu torņus
+          un tiltus. Protams, paveicas, ja ir labi laikapstākļi! Latvijas
+          Zinātņu akadēmijas ēka ir unikāla būve, kas manu uzmanību ir
+          piesaistījusi jau no agras bērnības, kad braucām uz Rīgu. Tās
+          arhitektūra vienmēr atgādināja kādu pili. Zinātņu akadēmijas
+          augstceltne ir 21 stāvu augsta. Tā tiek uzskatīta par pirmo
+          augstceltni Latvijā. Augstceltnes projektēšana un arī celtniecība ilga
+          gandrīz 10 gadus un tā tika pabeigta 1961. gadā.
+        </p>
       </div>
     </div>
-    <footer class="relative bottom-0 w-full drop-shadow-xl mt-10 p-5 bg-zinatn-header text-white font-extralight flex flex-col items-center">
-      <img src="images/lvw.png" alt="Logo" class="max-w-logo w-1/4 sm:w-1/5 lg:w-1/6 ">
+    <footer
+      class="relative bottom-0 w-full drop-shadow-xl mt-10 p-5 bg-zinatn-header text-white font-extralight flex flex-col items-center"
+    >
+      <img
+        src="images/lvw.png"
+        alt="Logo"
+        class="max-w-logo w-1/4 sm:w-1/5 lg:w-1/6"
+      />
       <span class="mt-4">© Atis Ozols 2022</span>
     </footer>
     <script src="main.js"></script>
