--- a/zinatnu.html
+++ b/zinatnu.html
@@ -41,7 +41,7 @@
     </button>
     <div
       id="sidebar"
-      class="bg-zinatn-header hidden h-screen absolute top-0 right-[-110%]"
+      class="bg-zinatn-header hidden w-screen h-screen absolute top-0 right-[-110%]"
       style="transition: right 0.3s ease"
     >
       <button
