--- a/stadions.html
+++ b/stadions.html
@@ -54,7 +54,7 @@
             sporta veidos, kā, piemēram, vieglatlētikā, futbolā, basketbolā
             un pludmales volejbolā. Šeit tiek rīkotas sacensības vieglatlētikā
             gan lieliem gan maziem un futbola spēles, kurās piedalos arī es
-            kā Futbola Kluba 2000 komandas kapteinis.
+            kā FK Tukums 2000 komandas kapteinis.
             </p>
         </div>
     </div>
