--- a/stadions_english.html
+++ b/stadions_english.html
@@ -14,14 +14,21 @@
     <link rel="stylesheet" href="style.css" />
     <title>Atis Ozols</title>
   </head>
-  <body class="bg-stadions-lightblue font-kanit w-screen" style="overflow-x: hidden;">
+  <body
+    class="bg-stadions-lightblue font-kanit w-screen"
+    style="overflow-x: hidden"
+  >
     <nav class="p-5 bg-stadions-blue text-white font-extralight">
       <ul class="flex justify-center sm:justify-between">
-        <li><a href="index_english.html"><img src="images/logo_white.png" alt="Atis Ozols" class="h-5"></a></li>
+        <li>
+          <a href="index_english.html"
+            ><img src="images/logo_white.png" alt="Atis Ozols" class="h-5"
+          /></a>
+        </li>
         <li>
           <div class="hidden sm:block">
             <ul class="flex">
-                <li class="mr-2"><a href="index_english.html">Home</a></li>
+              <li class="mr-2"><a href="index_english.html">Home</a></li>
               <li><a href="about_english.html">About me</a></li>
               <li class="ml-2 mr-2"><a href="stadions.html">LV</a></li>
             </ul>
@@ -29,37 +36,62 @@
         </li>
       </ul>
     </nav>
-    <button class="text-white absolute top-0 p-2 right-3 text-4xl sm:hidden" onclick="open_side()">=</button>
-    <div id="sidebar" class="bg-stadions-blue w-screen hidden h-screen absolute top-0 right-[-110%]" style="transition: right 0.3s ease">
-      <button class="text-white relative top-4 left-[7%] text-3xl sm:hidden" onclick="close_side()">X</button>
+    <button
+      class="text-white absolute top-0 p-2 right-3 text-4xl sm:hidden"
+      onclick="open_side()"
+    >
+      =
+    </button>
+    <div
+      id="sidebar"
+      class="bg-stadions-blue w-screen hidden h-screen absolute top-0 right-[-110%]"
+      style="transition: right 0.3s ease"
+    >
+      <button
+        class="text-white relative top-4 left-[7%] text-3xl sm:hidden"
+        onclick="close_side()"
+      >
+        X
+      </button>
       <div>
-        <ul class="mt-10 flex flex-col justify-center items-center text-white ">
+        <ul class="mt-10 flex flex-col justify-center items-center text-white">
           <li class="text-3xl mt-8"><a href="index_english.html">Home</a></li>
-          <li class="text-3xl mt-8"><a href="about_english.html">About me</a></li>
+          <li class="text-3xl mt-8">
+            <a href="about_english.html">About me</a>
+          </li>
           <li class="text-3xl mt-8"><a href="stadions.html">LV</a></li>
         </ul>
       </div>
     </div>
     <div class="min-h-screen">
-        <div class="m-6 rounded-md overflow-hidden flex flex-col justify-center sm:h-custom1 lg:h-custom">
-          <img class="w-full " src="images/stadions_cropped.jpg">
-        </div>
-        <div class="bg-white m-6 rounded-md p-6 mb-11">
-          <h3 class="m-6 text-3xl text-bold">Tukums Sports school stadium</h3>
-          <p class="text-xl m-6">Every morning my day starts with training at Tukums Sports School
-            in the stadium. It is located about 8km from my place of residence
-            towards Riga. It is an important place in sports life not only for the residents of
-            Tukums, but also other athletes in both professional and
-            both at the amateur level. The stadium hosts various trainings every day for
-            sports such as athletics, football, basketball
-            and beach volleyball. Athletics competitions are held here
-            both big and small and football games in which I also participate
-            as captain of the Tukums FC team.
-            </p>
-        </div>
+      <div
+        class="m-6 rounded-md overflow-hidden flex flex-col justify-center sm:h-custom1 lg:h-custom"
+      >
+        <img class="w-full" src="images/stadions_cropped.jpg" />
+      </div>
+      <div class="bg-white m-6 rounded-md p-6 mb-11">
+        <h3 class="m-6 text-3xl text-bold">Tukums Sports school stadium</h3>
+        <p class="text-xl m-6">
+          Every morning my day starts with training at Tukums Sports School in
+          the stadium. It is located about 8km from my place of residence
+          towards Riga. It is an important place in sports life not only for the
+          residents of Tukums, but also other athletes in both professional and
+          both at the amateur level. The stadium hosts various trainings every
+          day for sports such as athletics, football, basketball and beach
+          volleyball. Athletics competitions are held here both big and small
+          and football games in which I also participate as the captain of the
+          FK Tukums 2000 squad.
+        </p>
+      </div>
     </div>
-    <footer class="relative bottom-0 w-full drop-shadow-xl mt-10 p-5 bg-stadions-blue text-white font-extralight flex flex-col items-center">
-      <img src="images/enw.png" alt="Logo" class="max-w-logo w-1/4 sm:w-1/5 lg:w-1/6 ">
+    <footer
+      class="relative bottom-0 w-full drop-shadow-xl mt-10 p-5 bg-stadions-blue text-white font-extralight flex flex-col items-center"
+    >
+      <img
+        src="images/enw.png"
+        alt="Logo"
+        class="max-w-logo w-1/4 sm:w-1/5 lg:w-1/6"
+      />
       <span class="mt-4">© Atis Ozols 2022</span>
     </footer>
     <script src="main.js"></script>
